0.4.0 - currently working on
- [#999] Change: Require PHP 5.1
- [#1599] Feature: Add a function getMarker()
- [#1525] Feature: Make the content of e-mails testable
- [#1568] Feature: Add a public function isSubpartVisible
- [#1552] Feature: Add an extension icon
- [#1520] Feature: Allow to create dummy template records
- [#1545] Change: markTableAsDirty should be public
- [#1507] Feature: Add a utility function for getting associative DB results
- [#1541] Change: Remove the return; for functions that do not return anything
- [#1335] Change: Add scope="col" to the timer results table
- [#1422] Fix: Change tx_oelib_testingframework_testcase::testRemoveRelationOnRealRecord()
- [#1537] Change: Make the timer tests run faster
- [#1490] Feature: Make "cache_pages" an allowed table
- [#1489] Change: The column "doktype" should not be allowed in createFrontEndPage and createSystemFolder
- [#1471] Change: Move the testing framework from tests/fixtures/ to the oelib main directory and rename it
- [#1470] Change: Include the BE template file
- [#1325] Feature: Added function to edit existing dummy records
- [#1183] Feature: Create an EM configuration proxy
- [#1464] Fix: Include all needed libraries in the template helper so it can be used from the CLI
- [#1459] Change: The testing framework should throw exceptions on errors instead of failing silently.
- [#1440] Feature: Add functions in the testing framework to create dummy content elements
- [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders
- [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
- [#1328] Feature: Add the "is_dummy_record" field to the fe_users, pages  and tt_content tables
- [#1378] Change: Remove the enableGlobalFunctions setting from the EM and use static methods instead
- [#1382] Feature: Testing framework: add sorting to created relations
- [#1400] Fix: Correct a few typos