@@ -1,0 +1,50 @@
+<?php
+/***************************************************************
+* Copyright notice
+*
+* (c) 2008 Saskia Metzler <saskia@merlin.owl.de> All rights reserved
+*
+* This script is part of the TYPO3 project. The TYPO3 project is
+* free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* The GNU General Public License can be found at
+* http://www.gnu.org/copyleft/gpl.html.
+*
+* This script is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+/**
+ * This is mere a class to test the configuration check class in the 'oelib'
+ * extension.
+ *
+ * @package		TYPO3
+ * @subpackage	tx_oelib
+ * @author		Saskia Metzler <saskia@merlin.owl.de>
+ */
+
+require_once(t3lib_extMgm::extPath('oelib').'class.tx_oelib_templatehelper.php');
+
+final class tx_oelib_dummyObjectToCheck extends tx_oelib_templatehelper {
+	/**
+	 * The constructor.
+	 *
+	 * @param	array		configuration for the dummy object, may be empty
+	 */
+	public function __construct(array $configuration) {
+		$this->init($configuration);
+	}
+}
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_dummyObjectToCheck.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_dummyObjectToCheck.php']);
+}
+
+?>
